Remove unused modules `key_mapping.rs` and `keycode_map.rs`; refactor `KeyNameToEvdevCode` for improved functionality and test coverage; update `KeyRepeater` and `VirtualDevice` for enhanced caching and thread safety.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/INeery/akr_wayland"
 
 [dependencies]
 # Async runtime (оптимизированные features)
-tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "macros", "signal"] }
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "macros", "signal", "net"] }
 
 # Современная работа с evdev
 evdev = "0.13.1"
