--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ clap = { version = "4.0", features = ["derive"] }
 figment = { version = "0.10", features = ["toml", "env"] }
 serde = { version = "1.0", features = ["derive"] }
 
-# D-Bus для реактивного отслеживания окон
-zbus = "5.9.0"
+# D-Bus для реактивного отслеживания окон (опционально)
+zbus = { version = "5.9.0", optional = true }
 
 # Эффективные структуры данных
 dashmap = "6.1.0"
@@ -41,7 +41,9 @@ once_cell = "1.19"
 async-trait = "0.1"
 
 [features]
+# По умолчанию без D-Bus; включите feature "dbus" для реактивного режима
 default = []
+dbus = ["zbus"]
 
 [profile.release]
 # ✅ Максимальная оптимизация скорости
