--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ zbus = { version = "5.9.0", optional = true }
 # Эффективные структуры данных
 dashmap = "6.1.0"
 parking_lot = "0.12"
-smallvec = "1.15.1"
 
 # Современная обработка ошибок
 anyhow = "1.0"
@@ -37,7 +36,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }
 
 # Утилиты
-once_cell = "1.19"
 async-trait = "0.1"
 
 [features]
@@ -46,7 +44,7 @@ default = []
 dbus = ["zbus"]
 
 [profile.release]
-# ✅ Максимальная оптимизация скорости
+# Максимальная оптимизация скорости
 opt-level = 3            # Максимальная оптимизация скорости
 lto = "fat"              # Агрессивная link-time оптимизация
 codegen-units = 1        # Лучшая оптимизация
@@ -55,4 +53,4 @@ strip = true             # Удаляем debug символы
 
 [profile.release-small]
 inherits = "release"
-opt-level = "s"          # ✅ Оптимизация размера (было "z")
+opt-level = "s"          # Оптимизация размера (было "z")
